# spec-icu

./: Cargo.toml  README.md  gen-data.sh
src/: lib.rs
